fix: blog post nav overlap, remove broken image, fix blog index card

--- a/app/blog/blog.css
+++ b/app/blog/blog.css
@@ -199,7 +199,7 @@
 .blog-post-header {
   max-width: 720px;
   margin: 0 auto;
-  padding: 4rem 2rem 3rem;
+  padding: 7rem 2rem 3rem;
 }
 .blog-post-back {
   display: inline-flex;
